# DeepReport-

./: .gitignore  CODEX_RUNBOOK.md  README.md  pyproject.toml  项目总结_ReceiptVLM_Novel2Video.md
DeepReport_plus/: .env.example  AGENTS.md  Open_DeepReportpp_Stage12_Local_Plan.md  README.md
DeepReport_plus/configs/: evaluation_stage12a.yaml  local_real_smoke.yaml  model_backends.yaml  report_company.yaml  verifier.yaml
DeepReport_plus/docs/: cloud_readiness.md  cloud_training.md  deepreport_reference_diff_audit_stage12.md  deepreport_repo_audit.md  grounding_rule_experiment_v1_cn.md  grounding_rule_experiment_v2_batch_cn.md  grounding_rule_revision_proposal_cn.md  per_claim_verification_cn.md  real_data_contract.md  regression_v1_judgement_guide.md  review_backfill_summary_cn.md  review_backfill_summary_v2_cn.md  review_coverage_expansion_v1_cn.md  stage12a_judgement.md  stage_acceptance_report.md  writer_backend_stage11b.md
DeepReport_plus/scripts/: run_eval_v1.py  (+14 more)
configs/: app.yaml  cloud_train.yaml  data_sources.yaml  local_debug.yaml  local_smoke.yaml  reranker.yaml  rewriter.yaml
docs/: deepreport_skeleton_mapping.md
scripts/: download_from_cloud.sh  run_local_smoke.py  run_stage10_export_smoke.py  run_stage11a_real_data_smoke.py  run_stage11b_writer_backend_smoke.py  run_stage11c_reranker_cloud_validation.sh  run_stage2_data_smoke.py  run_stage5_chart_smoke.py  run_stage9_training_smoke.py
tests/: test_chart_layer.py  test_config_loader.py  test_feature_layer.py  test_reranker_cloud_pipeline.py  test_stage4_pipeline.py  test_writer_backend_real_path.py
(+206 files in other folders)
