[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-deepreport-plus"
version = "0.1.0"
description = "Evidence-driven company/stock report system scaffold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.3.0",
  "pandas>=2.2.2",
  "PyYAML>=6.0.1",
  "pyarrow>=16.1.0",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
